stated script to package lambda

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,46 @@
 version: "3.8"
 services:
-  local-stack:
-    image: localstack/localstack:latest
-    container_name: localstack
+  lambda:
+    image: python:3.9-slim-buster
+    container_name: lambda
     volumes:
-      - ./src/resources/split_data:/opt/code/localstack/split_data
-    ports:
-      - "4566:4566"
-    environment:
-      - AWS_ACCESS_KEY_ID=dummy
-      - AWS_SECRET_ACCESS_KEY=dummy
-  terraform:
-    image: hashicorp/terraform:latest
-    container_name: terraform
-    depends_on:
-      - local-stack
-    environment:
-      - AWS_ACCESS_KEY_ID=dummy
-      - AWS_SECRET_ACCESS_KEY=dummy
-    volumes:
-      - ./infra:/infra
-      - ./scripts/terraform/:/scripts
-      - ./src:/src
+      - ./src:/src:ro
+      - ./scripts/aws/:/scripts:ro
     entrypoint: /scripts/commands.sh
-  postgre:
-    image: postgres:latest
-    container_name: postgres
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - PROJECT_DATABASE_NAME=graph_project
-    volumes:
-      - ./scripts/postgres/:/docker-entrypoint-initdb.d
-    depends_on:
-      - local-stack
-    ports:
-      - "5432:5432"
+  # local-stack:
+  #   image: localstack/localstack:latest
+  #   container_name: localstack
+  #   volumes:
+  #     - ./src/resources/split_data:/opt/code/localstack/split_data
+  #   ports:
+  #     - "4566:4566"
+  #   environment:
+  #     - AWS_ACCESS_KEY_ID=dummy
+  #     - AWS_SECRET_ACCESS_KEY=dummy
+  # terraform:
+  #   image: hashicorp/terraform:latest
+  #   container_name: terraform
+  #   depends_on:
+  #     - local-stack
+  #     - lambda
+  #   environment:
+  #     - AWS_ACCESS_KEY_ID=dummy
+  #     - AWS_SECRET_ACCESS_KEY=dummy
+  #   volumes:
+  #     - ./infra:/infra
+  #     - ./scripts/terraform/:/scripts
+  #     - ./src:/src
+  #   entrypoint: /scripts/commands.sh
+  # postgre:
+  #   image: postgres:latest
+  #   container_name: postgres
+  #   environment:
+  #     - POSTGRES_USER=postgres
+  #     - POSTGRES_PASSWORD=postgres
+  #     - PROJECT_DATABASE_NAME=graph_project
+  #   volumes:
+  #     - ./scripts/postgres/:/docker-entrypoint-initdb.d
+  #   depends_on:
+  #     - local-stack
+  #   ports:
+  #     - "5432:5432"
