--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,13 +30,13 @@ services:
       - graph-project-local-stack
     ports:
       - "5432:5432"
-  # graph-project-gremlin:
-  #   image: tinkerpop/gremlin-server:3.6
-  #   container_name: graph-project-gremlin
-  #   depends_on:
-  #     - graph-project-local-stack
-  #   ports:
-  #     - "8182:8182"
+  graph-project-gremlin:
+    image: tinkerpop/gremlin-server:3.6
+    container_name: graph-project-gremlin
+    depends_on:
+      - graph-project-local-stack
+    ports:
+      - "8182:8182"
   # graph-project-gremlin-console:
   #   image: tinkerpop/gremlin-console:3.6
   #   container_name: graph-project-gremlin-console
