--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,9 @@ services:
       - graph-project-local-stack
     ports:
       - "8182:8182"
-  # graph-project-gremlin-console:
-  #   image: tinkerpop/gremlin-console:3.6
-  #   container_name: graph-project-gremlin-console
-  #   tty: true
+  graph-project-gremlin-console:
+    image: graph-project-gremlin-console
+    container_name: graph-project-gremlin-console
+    depends_on:
+      - graph-project-gremlin
+    tty: true
